# BudgetManager

./: .gitignore  Cargo.toml  README.md  test.db3  todo.md
src/: account.rs  budget.rs  cli.rs  database.rs  db.rs  lib.rs  main.rs  record.rs  services.rs  transaction.rs  utils.rs
src/action/: mod.rs
src/budget/: mod.rs
src/database/: mod.rs
src/history/: mod.rs
src/record/: mod.rs
