[package]
name = "budget_manager"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Arteta"]
description = "Interactive budget manager CLI application written in Rust🦀."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accounting = "0.2.0"
clap = { version = "4.4.4", features = ["derive"] }
home = "0.5.9"
rusqlite = { version = "0.29.0", features = ["bundled"] }
